tests/baselines/reference/classPropertyAsProtected.errors.txt
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts(3,19): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts(4,19): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts(8,26): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts(9,26): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts(15,1): error TS2445: Property 'x' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts(16,1): error TS2445: Property 'y' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts(17,1): error TS2445: Property 'y' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts(18,1): error TS2445: Property 'foo' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts(20,1): error TS2445: Property 'a' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts(21,1): error TS2445: Property 'b' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts(22,1): error TS2445: Property 'b' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts(23,1): error TS2445: Property 'foo' is protected and only accessible within class 'C' and its subclasses.


==== tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.ts (12 errors) ====
    class C {
        protected x: string;
        protected get y() { return null; }
                      ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        protected set y(x) { }
                      ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        protected foo() { }
    
        protected static a: string;
        protected static get b() { return null; }
                             ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        protected static set b(x) { }
                             ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        protected static foo() { }
    }
    
    var c: C;
    // all errors
    c.x;
    ~~~
!!! error TS2445: Property 'x' is protected and only accessible within class 'C' and its subclasses.
    c.y;
    ~~~
!!! error TS2445: Property 'y' is protected and only accessible within class 'C' and its subclasses.
    c.y = 1;
    ~~~
!!! error TS2445: Property 'y' is protected and only accessible within class 'C' and its subclasses.
    c.foo();
    ~~~~~
!!! error TS2445: Property 'foo' is protected and only accessible within class 'C' and its subclasses.
    
    C.a;
    ~~~
!!! error TS2445: Property 'a' is protected and only accessible within class 'C' and its subclasses.
    C.b();
    ~~~
!!! error TS2445: Property 'b' is protected and only accessible within class 'C' and its subclasses.
    C.b = 1;
    ~~~
!!! error TS2445: Property 'b' is protected and only accessible within class 'C' and its subclasses.
    C.foo();
    ~~~~~
!!! error TS2445: Property 'foo' is protected and only accessible within class 'C' and its subclasses.